--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,9 @@
-@use "_default.scss" as *;
+@use "default" as *;
+@use "components/header" as *;
+@use "components/hero" as *;
+@use "components/about" as *;
+@use "components/advantages" as *;
+@use "components/subscribe" as *;
+@use "components/footer" as *;
 
 @import "normalize.css";
-
