--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -1,5 +1,6 @@
 @use "fonts" as *;
 @use "variables" as *;
+@use "media" as *;
 
 html {
   position: relative;
@@ -78,4 +79,12 @@ p {
   max-width: 1404px;
   padding: 0 52px;
   margin: 0 auto;
+
+  @include tablet {
+    padding: 0 46px;
+  }
+
+  @include mobile {
+    padding: 0 14px;
+  }
 }
