--- a/src/scss/components/_subscribe.scss
+++ b/src/scss/components/_subscribe.scss
@@ -35,7 +35,7 @@
     width: 100%;
     background-color: transparent;
     font-weight: 400;
-    font-size: 24px;
+    font-size: inherit;
     line-height: 1.4;
     color: $green;
 
@@ -55,7 +55,6 @@
     border-radius: 40px;
     padding: 16px 31px;
     font-weight: 700;
-    font-size: 24px;
     line-height: 1.4;
     color: $light;
     display: flex;
