--- a/src/scss/components/_advantages.scss
+++ b/src/scss/components/_advantages.scss
@@ -1,4 +1,5 @@
 @use "../variables" as *;
+@use "../media" as *;
 
 .advantages {
   position: relative;
@@ -11,6 +12,20 @@
     background-position: center;
     background-repeat: no-repeat;
     padding: 100px 0;
+
+    @include laptop {
+      padding: 80px 0;
+      border-radius: 200px 200px 0 0;
+    }
+
+    @include tablet {
+      border-radius: 120px 120px 0 0;
+    }
+
+    @include mobile {
+      padding: 50px 0;
+      border-radius: 80px 80px 0 0;
+    }
   }
 
   &__title {
@@ -18,12 +33,37 @@
     line-height: 1.3;
     text-align: center;
     margin-bottom: 50px;
+
+    @include laptop {
+      font-size: 44px;
+      margin-bottom: 32px;
+    }
+
+    @include mobile {
+      max-width: 300px;
+      margin: 0 auto;
+      font-size: 30px;
+      margin-bottom: 24px;
+    }
   }
 
   &__list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 24px;
+
+    @include laptop {
+      gap: 20px;
+    }
+
+    @include tablet {
+      grid-template-columns: 1fr;
+      gap: 50px;
+    }
+
+    @include mobile {
+      gap: 32px;
+    }
   }
 
   &__item {
@@ -31,6 +71,16 @@
     background-size: 256px;
     background-position: top;
     background-repeat: no-repeat;
+
+    @include laptop {
+      padding-top: 172px;
+      background-size: 160px;
+    }
+
+    @include mobile {
+      padding-top: 86px;
+      background-size: 80px;
+    }
   }
 
   &__item_assortment {
@@ -50,6 +100,15 @@
     font-size: 28px;
     text-align: center;
     margin: 0 auto 12px;
+
+    @include laptop {
+      font-size: 24px;
+    }
+
+    @include mobile {
+      font-size: 20px;
+      margin-bottom: 4px;
+    }
   }
 
   &__text {
@@ -68,12 +127,42 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @include laptop {
+      width: 257px;
+      height: 257px;
+      top: -102px;
+    }
+
+    @include tablet {
+      width: 201px;
+      height: 201px;
+      top: -102px;
+    }
+
+    @include mobile {
+      width: 140px;
+      height: 140px;
+      top: -73px;
+    }
   }
 
   &__count {
     font-weight: 700;
     font-size: 52px;
     text-align: center;
+
+    @include laptop {
+      font-size: 44px;
+    }
+
+    @include tablet {
+      font-size: 32px;
+    }
+
+    @include mobile {
+      font-size: 20px;
+    }
   }
 
   &__count-text {
@@ -90,6 +179,28 @@
     top: -338px;
     right: 0;
     background-image: url("/img/dog.png");
+    background-size: contain;
     z-index: -1;
+
+    @include laptop {
+      width: 272px;
+      height: 469px;
+      top: -242px;
+      right: 8px;
+    }
+
+    @include tablet {
+      width: 202px;
+      height: 348px;
+      top: -176px;
+      right: -25px;
+    }
+
+    @include mobile {
+      width: 100px;
+      height: 169px;
+      top: -82px;
+      right: 0;
+    }
   }
 }
