--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,41 +1,83 @@
 @use "../variables" as *;
+@use "../media" as *;
 
 .footer {
-  padding: 80px 32px;
+  padding: 80px 0 32px;
   background-color: $green;
   background-image: url('/img/paw.svg');
   background-repeat: no-repeat;
   color: $light;
-  background-position: 41vw 50px;
+  background-position: left 41vw bottom -75px;
+  background-size: 375px;
+
+  @include laptop {
+    padding-top: 50px;
+    background-size: 311px;
+  }
+
+  @include tablet {
+    padding-top: 40px;
+    background-size: 215px;
+    background-position: right 46px bottom -45px;
+  }
+
+  @include mobile {
+    padding: 30px 0 24px;
+    background-size: 144px;
+    background-position: right -30px bottom -30px;
+  }
 
   &__container {
     display: grid;
+    gap: 50px;
     grid-template-areas:
       'logo contacts'
       'info contacts';
+
+    @include tablet {
+      gap: 82px 30px;
+    }
+
+    @include mobile {
+      gap: 0;
+      grid-template-areas:
+      'logo'
+      'contacts'
+      'info';
+    }
   }
 
   &__logo {
     grid-area: logo;
     width: 331px;
+
+    @include tablet {
+      width: 200px;
+    }
+
+    @include mobile {
+      margin-bottom: 32px;
+    }
   }
 
   &__info {
     grid-area: info;
+    font-size: 16px;
+
+    @include mobile {
+      font-size: 12px;
+    }
   }
 
   &__copyright {
-    font-size: 16px;
     margin-bottom: 16px;
   }
 
   &__text {
-    font-size: 16px;
     margin-bottom: 3px;
   }
 
   &__item {
-    font-size: 16px;
     margin-bottom: 3px;
 
     &:last-child{
@@ -47,6 +89,11 @@
     grid-area: contacts;
     justify-self: end;
     font-style: normal;
+
+    @include mobile {
+      margin-bottom: 66px;
+      justify-self: start;
+    }
   }
 
   &__email {
