--- a/src/scss/components/_product.scss
+++ b/src/scss/components/_product.scss
@@ -2,15 +2,61 @@
 @use "../media" as *;
 
 .product {
+  border-radius: 24px;
+  padding: 0 16px 16px 16px;
+  max-width: 420px;
+  min-height: 499px;
+  background-color: $white;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @include tablet {
+    min-height: 460px;
+  }
+
+  @include mobile {
+    min-height: 400px;
+  }
+
   &__image {
+    margin-bottom: 16px;
   }
 
   &__title {
+    font-weight: 700;
+    font-size: 28px;
+    text-align: center;
+    color: $green;
+    margin-bottom: 4px;
+    flex-grow: 1;
+    max-width: 340px;
+    align-self: center;
+
+    @include tablet {
+      font-size: 24px;
+    }
+
+    @include mobile {
+      font-size: 20px;
+    }
   }
 
   &__price {
+    font-size: 24px;
+    text-align: center;
+    color: $green;
+    margin-bottom: 24px;
   }
 
   &__button-add-cart {
+    border-radius: 40px;
+    padding: 16px 24px;
+    width: 100%;
+    background-color: $purple;
+    font-weight: 700;
+    text-align: center;
+    color: $light;
   }
 }
