Доделала функционал оформления заказа

--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -93,3 +93,23 @@ p {
     padding: 0 14px;
   }
 }
+
+.modal-overlay {
+  position: fixed;
+  overflow-y: auto;
+  padding: 20px 10px;
+  z-index: 999;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: none;
+  align-items: center;
+  justify-content: center;
+
+  &_close-button {
+    position: fixed;
+    color: white;
+    top: 12px;
+    right: 12px;
+    font-size: 36px;
+  }
+}
