--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,5 +8,7 @@
 @use "components/store";
 @use "components/product";
 @use "components/modal";
+@use "components/radio";
+@use "components/order-message";
 
 @import "normalize.css";
